# digikamweb

./: .gitignore  README.md
addons/pgf2jpg/: .gitignore  CMakeLists.txt  README.md  package.json  pnpm-lock.yaml
addons/pgf2jpg/src/cli/: pgf2jpg_cli.cpp
addons/pgf2jpg/src/lib/libpgf/: Decoder.cpp
addons/pgf2jpg/src/lib/pgf2jpg/: pgf2jpg.cpp  pgf2jpg.h
addons/pgf2jpg/src/lib/toojpeg/: toojpeg.cpp
addons/pgf2jpg/src/node/: pgf2jpg.mjs  pgf2jpg_addon.cpp  testpgf2jpg.cjs  testpgf2jpg.mjs
addons/pgf2jpg/tests/: thumbnail.pgf
backend/: digikamweb-template.toml  digikamweb.mjs  package.json  pnpm-lock.yaml  translations.toml
backend/ssl/: createKeys.sh  digikamweb.crt  digikamweb.key
frontend/: index.html
frontend/css/: digikamweb.css
frontend/js/: digikamweb.js
